# SelfplayLab

./: .gitignore  README.md  evaluate.py  play_game.py  pyproject.toml  run.py  visualize.ipynb
scripts/: prof_inference.py  prof_selfplay.py  run_serial_profile_selfplay.py  run_tree.py
selfplaylab/: bayeselo.py  net.py  play.py  train.py  treesearch.py  utils.py
selfplaylab/game/: __init__.py  go.py  gomoku.py  nim.py  othello.py
tests/: test_elo.py  test_game.py  test_search.py
