[tool.poetry]
name = "selfplaylab"
version = "0.1.0"
description = ""
authors = ["Sander Land <sander.land@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.1"
ray = "^0.8.6"
tqdm = "^4.48.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
elote = "^0.1.0"
psutil = "^5.7.2"
scipy = "^1.5.2"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.1.4"
yappi = "^1.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
